eks/nodePort.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: oes
  name: oes
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: oes
