eks/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: oes
  labels:
    app: oes
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":9080,"HTTPS": 443}]'
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: oes
              servicePort: 80
